src/objects/TestRecursive__c.object
<CustomObject>
    <description>For testing recursive for Pavan</description>
    <fields>
        <fullName>CounterVal__c</fullName>
        <label>CounterVal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecursiveCountNum__c</fullName>
        <label>RecursiveCountNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecursiveCount__c</fullName>
        <description>Vals</description>
        <label>RecursiveCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestRecursive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestRecursive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestRecursives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>